...
                style: TextButton.styleFrom(
                  foregroundColor: buttonColor ?? WidgetConstants.primaryColor,
                  textStyle: WidgetConstants.buttonTextStyle,
                  tapTargetSize: MaterialTapTargetSize.shrinkWrap,
                ),
                child: Text(
                  buttonText ?? (isCorrect ? '다음' : '확인'),
                  style: WidgetConstants.buttonTextStyle,
                ),
              ),
            ),
          ],
        ),
...

  @override
  Widget build(BuildContext context) {
    return CommonAnswerPopup(
      isCorrect: isCorrect,
      showNextButton: false,
      customTitle: isCorrect ? '정답입니다!' : '오답입니다.',
      customMessage: isCorrect ? '조금만 더 풀면 탈출할 수 있어요!' : '다시 한번 생각해 볼까요?',
    );
  }
}

